{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 52,
  "lineage": "39e9da62-77be-b9be-0263-8df1a68850ec",
  "resources": [
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_list",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "676ef7fb-7e5a-4dda-9c5a-2e84bb6c9bd7",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet",
            "location": "eastus",
            "name": "intro_vnet",
            "resource_group_name": "sirius",
            "subnets": [
              "default",
              "vmbytf01_subnet",
              "vmbytf02_subnet"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01_n_private",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf01_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-ED-0F-2A",
            "name": "vmbytf01_private_networkinterface",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "sirius",
            "virtual_machine_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Compute/virtualMachines/vmbytf01"
          },
          "dependencies": [
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf02_private_networkinterface",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf02_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-FE-6A-02",
            "name": "vmbytf02_private_networkinterface",
            "private_ip_address": "10.0.0.68",
            "private_ip_addresses": [
              "10.0.0.68"
            ],
            "resource_group_name": "sirius",
            "virtual_machine_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Compute/virtualMachines/vmbytf02"
          },
          "dependencies": [
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01_n_public",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf01_public_networkinterface",
            "internal_domain_name_suffix": "5p1w2z00p1ne1hc0f0clw1e10h.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/publicIPAddresses/vmbytf01_pubip",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf01_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "vmbytf01_public_networkinterface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "sirius"
          },
          "dependencies": [
            "module.vm.azurerm_public_ip.vm01_pubip",
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf02_public_networkinterface",
            "internal_domain_name_suffix": "5p1w2z00p1ne1hc0f0clw1e10h.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.69",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/publicIPAddresses/vmbytf02_pubip",
                "subnet_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf02_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "vmbytf02_public_networkinterface",
            "private_ip_address": "10.0.0.69",
            "private_ip_addresses": [
              "10.0.0.69"
            ],
            "resource_group_name": "sirius"
          },
          "dependencies": [
            "module.vm.azurerm_public_ip.vm01_pubip",
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_asste",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface|/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg",
            "network_interface_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf01_private_networkinterface",
            "network_security_group_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg"
          },
          "dependencies": [
            "module.vm.azurerm_network_interface.vm01_n_private",
            "module.vm.azurerm_network_interface.vm01_n_public",
            "module.vm.azurerm_network_security_group.nsg_def",
            "module.vm.azurerm_public_ip.vm01_pubip",
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf02_private_networkinterface|/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf02_nsg",
            "network_interface_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkInterfaces/vmbytf02_private_networkinterface",
            "network_security_group_id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf02_nsg"
          },
          "dependencies": [
            "module.vm.azurerm_network_interface.vm01_n_private",
            "module.vm.azurerm_network_interface.vm01_n_public",
            "module.vm.azurerm_network_security_group.nsg_def",
            "module.vm.azurerm_public_ip.vm01_pubip",
            "module.vm.azurerm_subnet.vm01_subnet",
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_def",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg",
            "location": "eastus",
            "name": "vmbytf01_nsg",
            "resource_group_name": "sirius",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf02_nsg",
            "location": "eastus",
            "name": "vmbytf02_nsg",
            "resource_group_name": "sirius",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "80",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf01_nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "vmbytf01_nsg",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "sirius",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "22",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm.azurerm_network_security_group.nsg_def"
          ]
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/networkSecurityGroups/vmbytf02_nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "vmbytf02_nsg",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "sirius",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "22",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm.azurerm_network_security_group.nsg_def"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm01_pubip",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/publicIPAddresses/vmbytf01_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmbytf01_pubip",
            "resource_group_name": "sirius",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "create_before_destroy": true
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/publicIPAddresses/vmbytf02_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmbytf02_pubip",
            "resource_group_name": "sirius",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm01_subnet",
      "provider": "module.vm.provider[\"registry.opentofu.org/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vmbytf01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf01_subnet",
            "name": "vmbytf01_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sirius",
            "virtual_network_name": "intro_vnet"
          },
          "dependencies": [
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        },
        {
          "index_key": "vmbytf02",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/47a2e12e-4f45-4723-aa61-35db7e45dc38/resourceGroups/sirius/providers/Microsoft.Network/virtualNetworks/intro_vnet/subnets/vmbytf02_subnet",
            "name": "vmbytf02_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sirius",
            "virtual_network_name": "intro_vnet"
          },
          "dependencies": [
            "module.vm.data.azurerm_virtual_network.vnet_list"
          ]
        }
      ]
    }
  ]
}